# mirae-tts

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  compose.yml
assets/: index.html
mirae-tts-cli/: Cargo.toml
mirae-tts-cli/src/: main.rs
mirae-tts-engine/: Cargo.toml
mirae-tts-engine/src/: colligation.rs  phoneme.rs  segmenter.rs  synthesizer.rs  unit_select.rs  wave_render.rs
mirae-tts-server/: Cargo.toml
mirae-tts-server/src/: main.rs
src/: english.rs  g2p.rs  korean.rs  kps_class.rs  lib.rs  main.rs  number.rs  phoneme.rs  segmenter.rs  speech.rs  synthesizer.rs  unit_select.rs  voice_info.rs  wave_render.rs
