[package]
name = "mirae-tts"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
default-run = "mirae-tts"
description = "Mirae 2.0 TTS engine reimplementation in Rust"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
kps9566 = { git = "https://github.com/REO2248/kps9566-rs" }
hound = "3.5"           # WAV file I/O
byteorder = "1.5"       # Binary file reading
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tokio-stream = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt"], optional = true }

[features]
default = []
web = [
    "tokio",
    "axum",
    "serde",
    "serde_json",
    "tower-http",
    "tokio-stream",
    "bytes",
    "tracing",
    "tracing-subscriber",
]

[[bin]]
name = "tts_server"
path = "src/bin/tts_server.rs"
required-features = ["web"]
